; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_apple-gmux.c_gmux_suspend.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_apple-gmux.c_gmux_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.pnp_dev = type { i32 }
%struct.apple_gmux_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @gmux_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gmux_suspend(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.pnp_dev*, align 8
  %4 = alloca %struct.apple_gmux_data*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %5 = load %struct.device*, %struct.device** %2, align 8
  %6 = call %struct.pnp_dev* @to_pnp_dev(%struct.device* %5)
  store %struct.pnp_dev* %6, %struct.pnp_dev** %3, align 8
  %7 = load %struct.pnp_dev*, %struct.pnp_dev** %3, align 8
  %8 = call %struct.apple_gmux_data* @pnp_get_drvdata(%struct.pnp_dev* %7)
  store %struct.apple_gmux_data* %8, %struct.apple_gmux_data** %4, align 8
  %9 = load %struct.apple_gmux_data*, %struct.apple_gmux_data** %4, align 8
  %10 = call i32 @gmux_disable_interrupts(%struct.apple_gmux_data* %9)
  ret i32 0
}

declare dso_local %struct.pnp_dev* @to_pnp_dev(%struct.device*) #1

declare dso_local %struct.apple_gmux_data* @pnp_get_drvdata(%struct.pnp_dev*) #1

declare dso_local i32 @gmux_disable_interrupts(%struct.apple_gmux_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
